fix z-index issue

--- a/src/documents/styles/shell.less
+++ b/src/documents/styles/shell.less
@@ -53,9 +53,7 @@ body {
 	}
 	@media screen and (min-width: 1140px) {
 	  [data-role="menu-ghost"] {
-	    height: 145px;
-	    z-index:1;
-	  }
+	    height: 145px;	  }
 	  #menu {
 	    margin-left: 0px;
 	  }
